@@ -88,9 +88,9 @@ public class TclBoolean implements InternalRep {
         String key = "TclInteger -> TclBoolean";
         Integer num = (Integer) TclObject.objRecordMap.get(key);
         if (num == null) {
-          num = new Integer(1);
+          num = Integer.valueOf(1);
         } else {
-          num = new Integer(num.intValue() + 1);
+          num = Integer.valueOf(num.intValue() + 1);
         }
         TclObject.objRecordMap.put(key, num);
       }
@@ -106,9 +106,9 @@ public class TclBoolean implements InternalRep {
         String key = "TclDouble -> TclBoolean";
         Integer num = (Integer) TclObject.objRecordMap.get(key);
         if (num == null) {
-          num = new Integer(1);
+          num = Integer.valueOf(1);
         } else {
-          num = new Integer(num.intValue() + 1);
+          num = Integer.valueOf(num.intValue() + 1);
         }
         TclObject.objRecordMap.put(key, num);
       }
@@ -168,9 +168,9 @@ public class TclBoolean implements InternalRep {
         String key = "TclString -> TclBoolean";
         Integer num = (Integer) TclObject.objRecordMap.get(key);
         if (num == null) {
-          num = new Integer(1);
+          num = Integer.valueOf(1);
         } else {
-          num = new Integer(num.intValue() + 1);
+          num = Integer.valueOf(num.intValue() + 1);
         }
         TclObject.objRecordMap.put(key, num);
       }
