@@ -38,9 +38,9 @@ public class TclDict implements InternalRep {
       String key = "TclDict";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
@@ -59,9 +59,9 @@ public class TclDict implements InternalRep {
       String key = "TclDict";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
@@ -100,9 +100,9 @@ public class TclDict implements InternalRep {
       String key = "TclDict.duplicate()";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
@@ -173,9 +173,9 @@ public class TclDict implements InternalRep {
       String key = "TclString -> TclDict";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
