@@ -55,9 +55,9 @@ public class TclDouble implements InternalRep {
       String key = "TclDouble";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
@@ -89,9 +89,9 @@ public class TclDouble implements InternalRep {
       String key = "TclDouble";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
@@ -116,9 +116,9 @@ public class TclDouble implements InternalRep {
       String key = "TclDouble.duplicate()";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
@@ -192,9 +192,9 @@ public class TclDouble implements InternalRep {
       String key = "TclString -> TclDouble";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
