@@ -29,9 +29,9 @@ public class TclList implements InternalRep {
       String key = "TclList";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
@@ -49,9 +49,9 @@ public class TclList implements InternalRep {
       String key = "TclList";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
@@ -85,9 +85,9 @@ public class TclList implements InternalRep {
       String key = "TclList.duplicate()";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
@@ -181,9 +181,9 @@ public class TclList implements InternalRep {
       String key = "TclString -> TclList";
       Integer num = (Integer) TclObject.objRecordMap.get(key);
       if (num == null) {
-        num = new Integer(1);
+        num = Integer.valueOf(1);
       } else {
-        num = new Integer(num.intValue() + 1);
+        num = Integer.valueOf(num.intValue() + 1);
       }
       TclObject.objRecordMap.put(key, num);
     }
