@@ -993,7 +993,7 @@ class AdaptorGen {
       short num) // Put this number under the given key
         // in the hashtable.
       {
-    Short shortObj = new Short(num);
+    Short shortObj = Short.valueOf(num);
     hashtable.put(key, shortObj);
   }
 
